Correct bug on spinner visiblity

--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -15,6 +15,7 @@
   }
   100% {
     opacity: 0;
+    visibility: hidden;
   }
 }
 
